--- a/my-react-app/src/Pages/FoodHomePage/FoodHomePage.module.css
+++ b/my-react-app/src/Pages/FoodHomePage/FoodHomePage.module.css
@@ -300,3 +300,33 @@
   margin-bottom: 2rem;
   color: var(--color-dark-pink);
 }
+
+.exploreRecipes {
+  text-align: center;
+  margin: 2rem 0;
+}
+
+.exploreRecipes h2 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.exploreRecipes p {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.exploreButton {
+  background-color: #f48fb1;
+  color: #fff;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.exploreButton:hover {
+  background-color: #9f2b82;
+}
